--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 beautifulsoup4==4.11.1
+Levenshtein==0.20.8
 numpy==1.23.3
 pandas==1.5.0
 plotly==5.10.0
 requests==2.28.1
 scikit_learn==1.1.2
 seaborn==0.12.1
-streamlit==1.12.0
+spacy==3.3.1
 tensorflow==2.10.0
